--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.2.0",
+    "@antfu/eslint-config": "^6.7.0",
     "@hedgedoc/markdown-it-plugins": "^2.1.4",
     "@iconify-json/eos-icons": "^1.2.4",
     "@iconify-json/ic": "^1.2.4",
     "@iconify-json/octicon": "^1.2.19",
     "@iconify-json/svg-spinners": "^1.2.4",
-    "@netlify/functions": "^5.1.0",
+    "@netlify/functions": "^5.1.1",
     "@nolebase/integrations": "2.18.2",
     "@nolebase/markdown-it-bi-directional-links": "^2.18.2",
     "@nolebase/markdown-it-unlazy-img": "^2.18.2",
@@ -55,12 +55,12 @@
     "@types/markdown-it": "^14.1.2",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node-fetch": "^2.6.13",
-    "@unocss/eslint-config": "^66.5.9",
-    "@unocss/reset": "^66.5.9",
+    "@unocss/eslint-config": "^66.5.10",
+    "@unocss/reset": "^66.5.10",
     "@vueuse/core": "^14.1.0",
     "@vueuse/shared": "^14.1.0",
     "emoji-regex": "^10.6.0",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.2",
     "gray-matter": "^4.0.3",
@@ -74,12 +74,12 @@
     "simple-git": "^3.30.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "unocss": "^66.5.9",
+    "unocss": "^66.5.10",
     "unplugin-vue-components": "^30.0.0",
     "uuid": "^13.0.0",
-    "vite": "^7.2.4",
+    "vite": "^7.2.7",
     "vite-plugin-inspect": "^11.3.3",
-    "vitepress": "^2.0.0-alpha.15",
+    "vitepress": "2.0.0-alpha.15",
     "vue": "^3.5.25"
   }
 }
