--- a/.github/workflows/zz_DeployPagesViaGithubActions.yml
+++ b/.github/workflows/zz_DeployPagesViaGithubActions.yml
@@ -30,7 +30,11 @@ env:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: pages
+  # 针对远程部署库，无法同时部署多个preview 添加并行限制
+  # group: preview-${{ github.event_name }}-${{ github.event.number || github.ref_name }}
+  # group: ${{ github.ref }}
+  # cancel-in-progress: true
+  group: pages-deployment
   cancel-in-progress: true
 
 jobs:
@@ -39,6 +43,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    if: vars.ENABLE_PREVIEW != ''
     steps:
       - name: Checkout
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
