fix: correct comment formatting for preview workflow file name in pull request workflows

--- a/.github/workflows/zz_AutoCreatePullRequest_pull_request_target.yml
+++ b/.github/workflows/zz_AutoCreatePullRequest_pull_request_target.yml
@@ -212,8 +212,8 @@ jobs:
           #     preview_branch: gh-pages
 
           #     # The name of the workflow file that contains the comment workflow in the preview repo
-          #     # Default: preview.yml
-          #     preview_workflow_file_name: preview.yml
+          # Default: preview.yml
+          preview_workflow_file_name: preview.yml
 
   merge:
     needs: [preview, check]
