--- a/.github/workflows/zz_AutoCreatePullRequest_push.yml
+++ b/.github/workflows/zz_AutoCreatePullRequest_push.yml
@@ -270,8 +270,8 @@ jobs:
           #     preview_branch: gh-pages
 
           #     # The name of the workflow file that contains the comment workflow in the preview repo
-          #     # Default: preview.yml
-          #     preview_workflow_file_name: preview.yml
+          # Default: preview.yml
+          preview_workflow_file_name: preview.yml
 
   merge:
     if: ${{success() && needs.check.outputs.able_start_merge}}
