--- a/.github/workflows/zz_AutoCreatePullRequest_push.yml
+++ b/.github/workflows/zz_AutoCreatePullRequest_push.yml
@@ -219,7 +219,7 @@ jobs:
           pnpm build
 
       # This will trigger the action. Make sure to change the build_dir input to the correct directory
-      - uses: EndBug/pages-preview@3e2aef8b39eb77522c278172e94c8628b2b58bcc # v1.1.2
+      - uses: EndBug/pages-preview@v1.1.2 # v1.1.2
         # env:
         #   RELATIVE_URL: ${{ steps.baseurl.outputs.RELATIVE_URL }}
         #   BASE_URL: ${{ steps.baseurl.outputs.PREVIEW_URL }}
