chore: 在 VSCode 设置中排除 gitignore 文件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,5 +84,6 @@
   "svgPreview.autoOpen": false,
   "svg.preview.showCrossLine": true,
   "svg.preview.showRuler": true,
-  "svg.preview.translateExternalAddress": true
+  "svg.preview.translateExternalAddress": true,
+  "explorer.excludeGitIgnore": true
 }
