feat: add i18n support with voerkai18n wip
Add internationalization support using voerkai18n library. Includes:
- New dependencies for i18n functionality
- Gitignore updates for i18n files
- Theme integration with i18n plugin and locale switcher component
- Package.json scripts for i18n extraction
- Configuration for voerkai18n in package.json

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ components.d.ts
 # Logs
 
 *.log
+
+languages/api.json
+languages/translates/*/*.bak.*.json
+**/*.wrapped.*
+src/languages/api.json
+src/languages/translates/*/*.bak.*.json
