--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,5 +85,5 @@
   "svg.preview.showCrossLine": true,
   "svg.preview.showRuler": true,
   "svg.preview.translateExternalAddress": true,
-  "explorer.excludeGitIgnore": true
+  "explorer.excludeGitIgnore": false
 }
