feat: 添加日语支持并优化国际化配置 wip
添加日语(ja-JP)语言支持，包括翻译文件和段落内容
更新国际化加载器和配置，修复.gitignore重复条目
优化HomePage赞助者标题的翻译处理
添加unplugin-auto-import插件以简化i18n API导入

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "unocss": "^66.5.10",
+    "unplugin-auto-import": "^20.3.0",
     "unplugin-vue-components": "^30.0.0",
     "uuid": "^13.0.0",
     "vite": "^7.2.7",
@@ -92,6 +93,7 @@
     "vue": "^3.5.25"
   },
   "voerkai18n": {
+    "debug": true,
     "entry": "",
     "namespaces": {
       "default": "messages"
@@ -99,7 +101,9 @@
     "patterns": [
       "**/*.ts",
       "**/*.vue",
-      "**/*.md"
+      "**/*.md",
+      ".vitepress/**/*.vue"
     ]
+
   }
 }
