--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ languages/translates/*/*.bak.*.json
 **/*.wrapped.*
 src/languages/api.json
 src/languages/translates/*/*.bak.*.json
+languages/api.json
+languages/translates/*/*.bak.*.json
+**/*.wrapped.*
