chore: 优化代码格式和VSCode配置
调整组件代码缩进，统一语言模块导入顺序
更新VSCode设置文件，添加更多GitLens配置
修复README.md文件头部空行问题

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,5 +85,29 @@
   "svg.preview.showCrossLine": true,
   "svg.preview.showRuler": true,
   "svg.preview.translateExternalAddress": true,
-  "explorer.excludeGitIgnore": false
+  "explorer.excludeGitIgnore": false,
+  "autoRestart.monitorFilesForTypescript": true,
+  "javascript.preferGoToSourceDefinition": true,
+  "javascript.suggestionActions.enabled": true,
+  "typescript.disableAutomaticTypeAcquisition": true,
+  "gitlens.statusBar.enabled": false,
+  "gitlens.statusBar.pullRequests.enabled": false,
+  "gitlens.statusBar.reduceFlicker": false,
+  "gitlens.hovers.enabled": false,
+  "gitlens.hovers.pullRequests.enabled": false,
+  "gitlens.hovers.currentLine.enabled": false,
+  "gitlens.hovers.currentLine.changes": false,
+  "gitlens.hovers.currentLine.details": false,
+  "gitlens.hovers.annotations.enabled": false,
+  "gitlens.hovers.annotations.details": false,
+  "gitlens.hovers.annotations.changes": false,
+  "gitlens.fileAnnotations.dismissOnEscape": false,
+  "gitlens.fileAnnotations.preserveWhileEditing": false,
+  "gitlens.blame.heatmap.enabled": false,
+  "gitlens.blame.avatars": false,
+  "gitlens.blame.compact": true,
+  "gitlens.blame.highlight.enabled": false,
+  "gitlens.blame.separateLines": false,
+  "gitlens.graph.minimap.enabled": false,
+  "gitlens.cloudPatches.enabled": false
 }
